Crash in [@ MapSrcDest]
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | wontfix |
firefox80 | --- | wontfix |
firefox81 | --- | fixed |
firefox82 | --- | fixed |
People
(Reporter: philipp, Assigned: jgilbert)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-6095e611-20c0-480a-9cfd-271130200803.
Top 10 frames of crashing thread:
0 xul.dll MapSrcDest gfx/thebes/gfxUtils.cpp:107
1 xul.dll static gfxUtils::PremultiplyDataSurface gfx/thebes/gfxUtils.cpp:160
2 xul.dll mozilla::ClientWebGLContext::GetFrontBufferSnapshot dom/canvas/ClientWebGLContext.cpp:903
3 xul.dll mozilla::layers::CanvasRenderer::BorrowSnapshot const gfx/layers/CanvasRenderer.cpp:62
4 xul.dll mozilla::layers::BasicCanvasLayer::Paint gfx/layers/basic/BasicCanvasLayer.cpp:38
5 xul.dll mozilla::layers::BasicLayerManager::PaintSelfOrChildren gfx/layers/basic/BasicLayerManager.cpp:703
6 xul.dll mozilla::layers::BasicLayerManager::PaintLayer gfx/layers/basic/BasicLayerManager.cpp
7 xul.dll mozilla::layers::BasicLayerManager::EndTransactionInternal gfx/layers/basic/BasicLayerManager.cpp:609
8 xul.dll mozilla::FrameLayerBuilder::PaintItems layout/painting/FrameLayerBuilder.cpp:7043
9 xul.dll static mozilla::FrameLayerBuilder::DrawPaintedLayer layout/painting/FrameLayerBuilder.cpp:7251
this content crash signature is newly showing up in firefox 79 and is looking related to the changes from bug 1632249.
the crash seems to primarily hit russian users on 32bit versions of the browser - all submitted urls in reports point towards yandex live wether maps (e.g. https://yandex.ru/pogoda/yurev-polskiy/maps/nowcast?via=mmapw&le_Lightning=1) as the source of the crash.
Comment 1•4 years ago
|
||
jgilbert triaging as reo for 79, could you set a priority and severity for this bug?
Updated•4 years ago
|
Comment 2•4 years ago
|
||
This is trending in the top 50, so we probably don't want it to fall off the radar.
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
Comment on attachment 9173491 [details]
Bug 1656991 - Handle surf alloc failure gracefully.
Beta/Release Uplift Approval Request
- User impact if declined: Occasional crash
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial null-check.
- String changes made/needed: none
Comment 6•4 years ago
|
||
bugherder |
Comment 7•4 years ago
|
||
Comment on attachment 9173491 [details]
Bug 1656991 - Handle surf alloc failure gracefully.
Approved for 81.0b6.
Comment 8•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Updated•4 years ago
|
Description
•