Bug 1656991 - Handle surf alloc failure gracefully. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D89061